pkg/lang/testdata/ub/configurations/invalid/body-not-object.ub
configurations: {
  aws.default: 'us-east-1'
}
